# agentic_bi

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml
.github/: BRANCH_PROTECTION.md  (+1 more)
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  pytest.ini  test_intent_classification.py
backend/alembic/: env.py
backend/alembic/versions/: 49427bdaa598_create_hitl_tables.py  a1b2c3d4e5f6_create_visualization_tables.py  add_notification_preferences.py  dce4b39f5a36_create_auth_tables.py  fix_hitl_request_id_types.py  fix_hitl_tables_schema.py  remove_companies_domain_unique.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  analysis_agent_langgraph.py  visualization_agent.py  visualization_nodes.py  visualization_state.py  workflow_nodes.py  workflow_state.py
backend/app/api/: __init__.py  agents.py  chart_preferences.py  databases.py  debug.py  deps.py  hitl.py  style_profiles.py  users.py  visualizations.py  websocket.py  workflows.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py
backend/app/core/: celery.py  config.py  llm.py  prompts.py  security.py  state.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/integrations/: __init__.py  email_notifier.py  slack_notifier.py
backend/app/models/: __init__.py  agent_models.py  base.py  company.py  hitl_models.py  refresh_token.py  user.py  visualization_models.py
backend/app/observability/: __init__.py  hitl_tracing.py
backend/app/repositories/: __init__.py  hitl_repository.py
backend/app/schemas/: __init__.py  agent_schemas.py  chart_template.py  company.py  sql_schemas.py  user.py  visualization_schemas.py  workflow_schemas.py
backend/app/services/: __init__.py  auth_service.py  database_service.py  hitl_service.py  mindsdb_service.py  notification_service.py  opa_client.py
backend/app/tasks/: __init__.py
backend/app/tools/: __init__.py  analysis_tools.py  hitl_tools.py  sql_tools.py  statistical_tools.py  visualization_tools.py
backend/app/websocket/: __init__.py  connection_manager.py  events.py
backend/app/workflows/: __init__.py  coordination_nodes.py  error_recovery.py  event_emitter.py  orchestrator.py  unified_state.py
backend/pocs/: PR2B_QUICKSTART.md  QUICKSTART.md  README.md  azure_openai_poc.py  combined_llm_langfuse_poc.py  end_to_end_poc.py  langfuse_poc.py  langgraph_workflow_poc.py  mindsdb_poc.py  websocket_server_poc.py
backend/tests/: test_coordination_nodes.py  test_correlation_analysis.py  test_enhanced_analysis_integration.py  test_trend_analysis.py  test_unified_workflow_integration.py  test_visualization_tools.py  test_websocket_connection_manager.py  test_websocket_integration.py  test_workflow_api.py
backend/tests/integration/: conftest.py  test_auth_integration.py  test_chart_preferences_integration.py  test_database_management_integration.py  test_opa_access_control.py  test_opa_endpoint.py  test_query_workflow_integration.py  test_real_auth_api.py  test_real_database_api.py  test_real_user_api.py  test_role_based_access_integration.py
backend/tests/pocs/: __init__.py  test_azure_openai_poc.py  test_combined_llm_langfuse_poc.py  test_langfuse_poc.py  test_langgraph_workflow_poc.py  test_mindsdb_poc.py
backend/tests/unit/: test_opa_client.py
frontend/: Dockerfile  (+6 more)
(+60 files in other folders)
